--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,10 +9,11 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">Error Validation Test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">14,901</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Submit Order Test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">28,823</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Error Validation Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.adarsh.tests.ErrorValidations</td><td><a href="#m0">errorHandling</a></td><td rowspan="1">1717039594649</td><td rowspan="1">776</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Submit Order Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">com.adarsh.tests.PlaceOrder</td><td><a href="#m0">purchaseOrder</a></td><td rowspan="1">1717040621265</td><td rowspan="1">5273</td></tr><tr class="passedeven"><td><a href="#m1">viewOrderHistory</a></td><td rowspan="1">1717040636458</td><td rowspan="1">1084</td></tr></tbody>
 </table>
-<h2>Error Validation Test</h2><h3 id="m0">com.adarsh.tests.ErrorValidations#errorHandling</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Submit Order Test</h2><h3 id="m0">com.adarsh.tests.PlaceOrder#purchaseOrder</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>{cvvNumber=123, loginUserEmail=rajadarsh711@gmail.com, loginUserPassword=Qwerty12345@, countryName=India, nameOnCard=Adarsh Raj, productName=ADIDAS ORIGINAL}</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.adarsh.tests.PlaceOrder#viewOrderHistory</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>{cvvNumber=123, loginUserEmail=rajadarsh711@gmail.com, loginUserPassword=Qwerty12345@, countryName=India, nameOnCard=Adarsh Raj, productName=ADIDAS ORIGINAL}</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
