--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Suite" class="navigator-link ">
-                    <span>C:\Users\catty\Documents\QATestAutomation\QAShoppingApp\testng_xml\error-validation.xml</span>
+                    <span>C:\Users\catty\Documents\QATestAutomation\QAShoppingApp\testng_xml\purchase-order.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">2 methods,   2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,7 +104,12 @@
                     <div class="method-list-content passed suite-Suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="com.adarsh.tests.ErrorValidations" class="method navigator-link" hash-for-method="errorHandling">errorHandling</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="com.adarsh.tests.PlaceOrder" class="method navigator-link" hash-for-method="purchaseOrder({cvvNumber=123, loginUserEmail=rajadarsh711@gmail.com, loginUserPassword=Qwerty12345@, countryName=I...)">purchaseOrder({cvvNumber=123, loginUserEmail=rajadarsh711@gmail.com, loginUserPassword=Qwerty12345@, countryName=I...)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite" title="com.adarsh.tests.PlaceOrder" class="method navigator-link" hash-for-method="viewOrderHistory({cvvNumber=123, loginUserEmail=rajadarsh711@gmail.com, loginUserPassword=Qwerty12345@, countryName=I...)">viewOrderHistory({cvvNumber=123, loginUserEmail=rajadarsh711@gmail.com, loginUserPassword=Qwerty12345@, countryName=I...)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Suite -->
@@ -122,14 +127,23 @@
           <div class="suite-Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.adarsh.tests.ErrorValidations</span>
+              <span class="class-name">com.adarsh.tests.PlaceOrder</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="errorHandling">
-                  </a> <!-- errorHandling -->
-                  <span class="method-name">errorHandling</span>
+                  <a name="purchaseOrder({cvvNumber=123, loginUserEmail=rajadarsh711@gmail.com, loginUserPassword=Qwerty12345@, countryName=I...)">
+                  </a> <!-- purchaseOrder({cvvNumber=123, loginUserEmail=rajadarsh711@gmail.com, loginUserPassword=Qwerty12345@, countryName=I...) -->
+                  <span class="method-name">purchaseOrder</span>
+                  <span class="parameters">({cvvNumber=123, loginUserEmail=rajadarsh711@gmail.com, loginUserPassword=Qwerty12345@, countryName=India, nameOnCard=Adarsh Raj, productName=ADIDAS ORIGINAL})</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="viewOrderHistory({cvvNumber=123, loginUserEmail=rajadarsh711@gmail.com, loginUserPassword=Qwerty12345@, countryName=I...)">
+                  </a> <!-- viewOrderHistory({cvvNumber=123, loginUserEmail=rajadarsh711@gmail.com, loginUserPassword=Qwerty12345@, countryName=I...) -->
+                  <span class="method-name">viewOrderHistory</span>
+                  <span class="parameters">({cvvNumber=123, loginUserEmail=rajadarsh711@gmail.com, loginUserPassword=Qwerty12345@, countryName=India, nameOnCard=Adarsh Raj, productName=ADIDAS ORIGINAL})</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -137,7 +151,7 @@
         </div> <!-- panel Suite -->
         <div panel-name="test-xml-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\catty\Documents\QATestAutomation\QAShoppingApp\testng_xml\error-validation.xml</span>
+            <span class="header-content">C:\Users\catty\Documents\QATestAutomation\QAShoppingApp\testng_xml\purchase-order.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -147,11 +161,11 @@
   &lt;listeners&gt;
     &lt;listener class-name=&quot;com.adarsh.tests.components.Listeners&quot;/&gt;
   &lt;/listeners&gt;
-  &lt;test thread-count=&quot;5&quot; parallel=&quot;tests&quot; name=&quot;Error Validation Test&quot;&gt;
+  &lt;test thread-count=&quot;5&quot; parallel=&quot;tests&quot; name=&quot;Submit Order Test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.adarsh.tests.ErrorValidations&quot;/&gt;
+      &lt;class name=&quot;com.adarsh.tests.PlaceOrder&quot;/&gt;
     &lt;/classes&gt;
-  &lt;/test&gt; &lt;!-- Error Validation Test --&gt;
+  &lt;/test&gt; &lt;!-- Submit Order Test --&gt;
 &lt;/suite&gt; &lt;!-- Suite --&gt;
             </pre>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -163,7 +177,7 @@
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">Error Validation Test (1 class)</span>
+                <span class="test-name">Submit Order Test (1 class)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -189,16 +203,20 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'errorHandling')
-data.setCell(0, 2, 'com.adarsh.tests.ErrorValidations')
-data.setCell(0, 3, 776);
+data.setCell(0, 1, 'purchaseOrder')
+data.setCell(0, 2, 'com.adarsh.tests.PlaceOrder')
+data.setCell(0, 3, 5273);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'viewOrderHistory')
+data.setCell(1, 2, 'com.adarsh.tests.PlaceOrder')
+data.setCell(1, 3, 1084);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 14 seconds</span>
+              <span class="suite-total-time">Total running time: 28 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -224,18 +242,30 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.adarsh.tests.ErrorValidations</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.adarsh.tests.PlaceOrder</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">launchApplication</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">errorHandling</span>
-                <span class="method-start">11365 ms</span>
+                <span class="method-name">purchaseOrder({cvvNumber=123, loginUserEmail=rajadarsh711@gmail.com, loginUserPassword=Qwerty12345@, countryName=I...)</span>
+                <span class="method-start">10105 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">closeApplication</span>
-                <span class="method-start">12570 ms</span>
+                <span class="method-start">15508 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">launchApplication</span>
+                <span class="method-start">17319 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">viewOrderHistory({cvvNumber=123, loginUserEmail=rajadarsh711@gmail.com, loginUserPassword=Qwerty12345@, countryName=I...)</span>
+                <span class="method-start">25298 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">closeApplication</span>
+                <span class="method-start">26519 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
