--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,10 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f7b9d7">  <td>24/05/30 08:56:35</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApplication()[pri:0, instance:com.adarsh.tests.ErrorValidations@194fad1]">&lt;&lt;closeApplication</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1040757046</td>   <td></td> </tr>
-<tr bgcolor="a5bad8">  <td>24/05/30 08:56:34</td>   <td>-1205</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ErrorValidations.errorHandling()[pri:0, instance:com.adarsh.tests.ErrorValidations@194fad1]">errorHandling</td> 
-  <td>TestNG-tests-1@1040757046</td>   <td></td> </tr>
-<tr bgcolor="f7b9d7">  <td>24/05/30 08:56:23</td>   <td>-12568</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchApplication()[pri:0, instance:com.adarsh.tests.ErrorValidations@194fad1]">&gt;&gt;launchApplication</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1040757046</td>   <td></td> </tr>
+<tr bgcolor="f7b9d7">  <td>24/05/30 09:13:57</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApplication()[pri:0, instance:com.adarsh.tests.PlaceOrder@14fc5f04]">&lt;&lt;closeApplication</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@1444720780</td>   <td></td> </tr>
+<tr bgcolor="f7b9d7">  <td>24/05/30 09:13:57</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApplication()[pri:0, instance:com.adarsh.tests.PlaceOrder@14fc5f04]">&lt;&lt;closeApplication</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@1444720780</td>   <td></td> </tr>
+<tr bgcolor="f7b9d7">  <td>24/05/30 09:13:48</td>   <td>-9201</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchApplication()[pri:0, instance:com.adarsh.tests.PlaceOrder@14fc5f04]">&gt;&gt;launchApplication</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@1444720780</td>   <td></td> </tr>
+<tr bgcolor="f7b9d7">  <td>24/05/30 09:13:48</td>   <td>-9201</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchApplication()[pri:0, instance:com.adarsh.tests.PlaceOrder@14fc5f04]">&gt;&gt;launchApplication</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@1444720780</td>   <td></td> </tr>
+<tr bgcolor="a5bad8">  <td>24/05/30 09:13:41</td>   <td>-16415</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PlaceOrder.purchaseOrder(java.util.HashMap)[pri:0, instance:com.adarsh.tests.PlaceOrder@14fc5f04]">purchaseOrder</td> 
+  <td>TestNG-tests-1@1444720780</td>   <td></td> </tr>
+<tr bgcolor="a5bad8">  <td>24/05/30 09:13:56</td>   <td>-1222</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PlaceOrder.viewOrderHistory(java.util.HashMap)[pri:0, instance:com.adarsh.tests.PlaceOrder@14fc5f04]">viewOrderHistory</td> 
+  <td>TestNG-tests-1@1444720780</td>   <td></td> </tr>
 </table>
